I commented some stuff. Hopefully this is good for Tekin.