@@ -22,7 +22,9 @@ public abstract class DBRepository implements Repository {
     @Override
     public final void initialize(Map<String, CoreDataUtils.CoreDataEntry> baseData) {
         Set<String> tableNames = new HashSet<>(getTables());
-        List<CoreDataUtils.CoreDataEntry> data = new ArrayList<>(baseData.values().stream().filter(entry -> getTables().contains(entry.name) && !CoreDataUtils.isSchemaInitialized(conn, entry.name)).collect(Collectors.toList()));
+        List<CoreDataUtils.CoreDataEntry> data = new ArrayList<>(baseData.values().stream().filter(entry -> getTables
+                ().contains(entry.name) && !CoreDataUtils.isSchemaInitialized(conn, entry.name)).collect(Collectors
+                .toList()));
         data.sort((o1, o2) -> Integer.compare(o1.order, o2.order));
         data.forEach(entry -> {
             if (!CoreDataUtils.createTableForData(conn, entry.name)) {
@@ -34,7 +36,8 @@ public abstract class DBRepository implements Repository {
         tableNames.stream().map(name -> {
             boolean val = CoreDataUtils.createTableForData(conn, name);
             return new AbstractMap.SimpleEntry<>(name, val);
-        }).filter(entry -> !entry.getValue()).forEach(entry -> System.err.println("Failed to make a table for: " + entry.getKey()));
+        }).filter(entry -> !entry.getValue()).forEach(entry -> System.err.println("Failed to make a table for: " +
+                entry.getKey()));
         CoreDataUtils.insertIntoDB(conn, data);
     }
 
