@@ -1,27 +1,27 @@
 package edu.cwru.eecs395_s16.test;
 
 import edu.cwru.eecs395_s16.core.InternalErrorCode;
-import edu.cwru.eecs395_s16.core.objects.creatures.UsePattern;
-import edu.cwru.eecs395_s16.core.objects.creatures.Weapon;
-import edu.cwru.eecs395_s16.core.objects.objectives.DeathmatchGameObjective;
-import edu.cwru.eecs395_s16.core.objects.objectives.GameObjective;
-import edu.cwru.eecs395_s16.networking.requests.gameactions.BasicAttackActionData;
-import edu.cwru.eecs395_s16.services.bots.botimpls.GameBot;
-import edu.cwru.eecs395_s16.services.bots.botimpls.TestBot;
 import edu.cwru.eecs395_s16.core.InternalResponseObject;
 import edu.cwru.eecs395_s16.core.Match;
 import edu.cwru.eecs395_s16.core.Player;
+import edu.cwru.eecs395_s16.core.objects.GameObject;
 import edu.cwru.eecs395_s16.core.objects.Location;
+import edu.cwru.eecs395_s16.core.objects.creatures.Creature;
+import edu.cwru.eecs395_s16.core.objects.creatures.UsePattern;
+import edu.cwru.eecs395_s16.core.objects.creatures.Weapon;
 import edu.cwru.eecs395_s16.core.objects.creatures.heroes.Hero;
 import edu.cwru.eecs395_s16.core.objects.maps.AlmostBlankMap;
-import edu.cwru.eecs395_s16.core.objects.creatures.Creature;
 import edu.cwru.eecs395_s16.core.objects.maps.GameMap;
-import edu.cwru.eecs395_s16.core.objects.GameObject;
+import edu.cwru.eecs395_s16.core.objects.objectives.DeathmatchGameObjective;
+import edu.cwru.eecs395_s16.core.objects.objectives.GameObjective;
 import edu.cwru.eecs395_s16.networking.NetworkingInterface;
 import edu.cwru.eecs395_s16.networking.requests.GameActionBaseRequest;
 import edu.cwru.eecs395_s16.networking.requests.NoInputRequest;
+import edu.cwru.eecs395_s16.networking.requests.gameactions.BasicAttackActionData;
 import edu.cwru.eecs395_s16.networking.requests.gameactions.MoveGameActionData;
 import edu.cwru.eecs395_s16.networking.requests.gameactions.PassGameActionData;
+import edu.cwru.eecs395_s16.services.bots.botimpls.GameBot;
+import edu.cwru.eecs395_s16.services.bots.botimpls.TestBot;
 import org.json.JSONObject;
 
 import java.util.*;
@@ -69,22 +69,6 @@ public abstract class InMatchTest extends SerializationTest {
         architectBot.disconnect();
     }
 
-    protected GameBot getHero() {
-        return new TestBot();
-    }
-
-    protected GameBot getArchitect() {
-        return new TestBot();
-    }
-
-    protected Set<UUID> useHeros() {
-        return null;
-    }
-
-    protected Map<Location, Integer> placeArchitectMonsters() {
-        return null;
-    }
-
     public InternalResponseObject<Match> setupMatch(boolean shouldAutoFail) {
         if (initialHeroes != null) {
             heroBot.replaceBotHeroes(initialHeroes);
@@ -102,7 +86,8 @@ public abstract class InMatchTest extends SerializationTest {
             useMonsterIDs = placeArchitectMonsters();
         }
 
-        InternalResponseObject<Match> matchOpt = Match.InitNewMatch(heroBot, architectBot, initialGameMap, initialObjective, useHeroIDs, useMonsterIDs);
+        InternalResponseObject<Match> matchOpt = Match.InitNewMatch(heroBot, architectBot, initialGameMap,
+                initialObjective, useHeroIDs, useMonsterIDs);
         if (matchOpt.isNormal()) {
             game = engine.networkingInterface;
             updateMatchState(heroBot);
@@ -137,7 +122,8 @@ public abstract class InMatchTest extends SerializationTest {
         assertEquals(loc, newLoc);
     }
 
-    public InternalResponseObject<Boolean> moveCharacter(Player p, UUID characterID, List<Location> path, boolean failTestOnFailure) {
+    public InternalResponseObject<Boolean> moveCharacter(Player p, UUID characterID, List<Location> path, boolean
+            failTestOnFailure) {
         MoveGameActionData actionData = new MoveGameActionData(characterID, path);
         GameActionBaseRequest req = new GameActionBaseRequest();
         try {
@@ -173,7 +159,8 @@ public abstract class InMatchTest extends SerializationTest {
             fail("Incorrect response while moving. ERROR:" + response.getMessage());
         }
         updateMatchState(p);
-        Creature myCharacter = (Creature) currentMatchState.getBoardObjects().getByID(character.getGameObjectID()).get();
+        Creature myCharacter = (Creature) currentMatchState.getBoardObjects().getByID(character.getGameObjectID())
+                .get();
         int newAP = myCharacter.getActionPoints();
         if (failTestOnFailure) {
             assertEquals(0, newAP);
@@ -181,7 +168,8 @@ public abstract class InMatchTest extends SerializationTest {
         return response;
     }
 
-    public InternalResponseObject<Boolean> basicAttackWithCharacter(Player p, UUID characterID, List<Location> inputs, boolean failTestOnFailure) {
+    public InternalResponseObject<Boolean> basicAttackWithCharacter(Player p, UUID characterID, List<Location>
+            inputs, boolean failTestOnFailure) {
         Optional<GameObject> cObj = currentMatchState.getBoardObjects().getByID(characterID);
         if (!cObj.isPresent() || !(cObj.get() instanceof Creature)) {
             return new InternalResponseObject<>(InternalErrorCode.UNKNOWN_OBJECT);
@@ -194,22 +182,24 @@ public abstract class InMatchTest extends SerializationTest {
         //Determine the predicted quantity of action points.
         int initialActionPoints = character.getActionPoints();
         int predictedNextActionPoints = Math.max(initialActionPoints - 1, 0);
-        List<Creature> playerCreatures = currentMatchState.getBoardObjects().getForPlayerOwner(p).stream().filter(obj -> obj instanceof Creature && ((Creature) obj).getActionPoints() > 0).map(obj -> (Creature) obj).collect(Collectors.toList());
-        if (playerCreatures.size() == 1 && playerCreatures.get(0).equals(character) && character.getActionPoints() == 1) {
+        List<Creature> playerCreatures = currentMatchState.getBoardObjects().getForPlayerOwner(p).stream().filter(obj
+                -> obj instanceof Creature && ((Creature) obj).getActionPoints() > 0).map(obj -> (Creature) obj)
+                .collect(Collectors.toList());
+        if (playerCreatures.size() == 1 && playerCreatures.get(0).equals(character) && character.getActionPoints() ==
+                1) {
             predictedNextActionPoints = character.getMaxActionPoints();
         }
         Map<Creature, Integer> affectedCreatureDamageMap = new HashMap<>();
         for (Location input : inputs) {
             Map<Location, Float> hitmap = pattern.getEffectDistributionMap(input);
             for (Map.Entry<Location, Float> entry : hitmap.entrySet()) {
-                List<Creature> creatures = currentMatchState
-                        .getBoardObjects()
-                        .getForLocation(entry.getKey())
-                        .stream().filter(obj -> obj instanceof Creature)
-                        .map(tmp -> (Creature) tmp).collect(Collectors.toList());
+                List<Creature> creatures = currentMatchState.getBoardObjects().getForLocation(entry.getKey()).stream
+                        ().filter(obj -> obj instanceof Creature).map(tmp -> (Creature) tmp).collect(Collectors
+                        .toList());
                 for (Creature c : creatures) {
                     int baseDamage = (int) Math.floor(((100 - c.getDefense()) / 100f) * character.getAttack());
-                    affectedCreatureDamageMap.put(c, Math.max(0, c.getHealth() - (int) ((float) baseDamage * entry.getValue())));
+                    affectedCreatureDamageMap.put(c, Math.max(0, c.getHealth() - (int) ((float) baseDamage * entry
+                            .getValue())));
                 }
             }
         }
@@ -235,7 +225,8 @@ public abstract class InMatchTest extends SerializationTest {
         }
         if (failTestOnFailure) {
             for (Map.Entry<Creature, Integer> affectedCreature : affectedCreatureDamageMap.entrySet()) {
-                Optional<GameObject> cResp = currentMatchState.getBoardObjects().getByID(affectedCreature.getKey().getGameObjectID());
+                Optional<GameObject> cResp = currentMatchState.getBoardObjects().getByID(affectedCreature.getKey()
+                        .getGameObjectID());
                 if (cResp.isPresent()) {
                     Creature c = (Creature) cResp.get();
                     assertEquals((int) affectedCreature.getValue(), c.getHealth());
@@ -245,5 +236,21 @@ public abstract class InMatchTest extends SerializationTest {
             }
         }
         return response;
+    }
+
+    protected GameBot getHero() {
+        return new TestBot();
+    }
+
+    protected GameBot getArchitect() {
+        return new TestBot();
+    }
+
+    protected Set<UUID> useHeros() {
+        return null;
+    }
+
+    protected Map<Location, Integer> placeArchitectMonsters() {
+        return null;
     }
 }
